@@ -2,8 +2,10 @@ package org.cloudfoundry.promregator.cache;
 
 import java.time.Duration;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 
 import org.checkerframework.checker.nullness.qual.NonNull;
 import org.junit.jupiter.api.Assertions;
@@ -19,17 +21,17 @@ import com.google.common.testing.FakeTicker;
 import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Schedulers;
 
-class CaffeineAsyncLoadingTest {
+public class CaffeineAsyncLoadingTest {
 	private static final Logger log = LoggerFactory.getLogger(CaffeineAsyncLoadingTest.class);
 
-	private final class AsyncCacheLoaderTimingImplementation implements AsyncCacheLoader<String, Integer> {
+	private static final class AsyncCacheLoaderTimingImplementation implements AsyncCacheLoader<String, Integer> {
 		private int executionNumber = 0;
 		
 		@Override
 		public @NonNull CompletableFuture<Integer> asyncLoad(@NonNull String key,
 				@NonNull Executor executor) {
 
-			log.info(String.format("Request loading iteration %d for request %s", this.executionNumber, key));
+			log.info("Request loading iteration {} for request {}", this.executionNumber, key);
 			Mono<Integer> result = null;
 			
 			synchronized(this) {
@@ -40,11 +42,11 @@ class CaffeineAsyncLoadingTest {
 			
 			if (this.executionNumber > 1) {
 				result = result.map( x-> {
-					log.info(String.format("Starting to delay - iteration: %d", x));
+					log.info("Starting to delay - iteration: {}", x);
 					return x;
 				}).delayElement(Duration.ofMillis(200))
 				.map( x-> {
-					log.info(String.format("Finished delaying - iteration: %d", x));
+					log.info("Finished delaying - iteration: {}", x);
 					return x;
 				});
 			}
@@ -56,7 +58,7 @@ class CaffeineAsyncLoadingTest {
 	}
 
 	@Test
-	void testRefreshIsAsynchronous() throws InterruptedException {
+	public void testRefreshIsAsynchronous() throws InterruptedException {
 		FakeTicker ticker = new FakeTicker();
 		
 		AsyncLoadingCache<String, Integer> subject = Caffeine.newBuilder()
@@ -67,19 +69,19 @@ class CaffeineAsyncLoadingTest {
 				.buildAsync(new AsyncCacheLoaderTimingImplementation());
 		
 		log.info("Starting first request");
-		Assertions.assertEquals(new Integer(0), Mono.fromFuture(subject.get("a")).block());
+		Assertions.assertEquals(Integer.valueOf(0), Mono.fromFuture(subject.get("a")).block());
 		log.info("Stats on cache: "+subject.synchronous().stats().toString());
 		
 		ticker.advance(Duration.ofSeconds(10));
 		
 		log.info("Sending second request");
-		Assertions.assertEquals(new Integer(0), Mono.fromFuture(subject.get("a")).block());
+		Assertions.assertEquals(Integer.valueOf(0), Mono.fromFuture(subject.get("a")).block());
 		log.info("Stats on cache: "+subject.synchronous().stats().toString());
 		
 		ticker.advance(Duration.ofSeconds(120));
 		
 		log.info("Sending third request");
-		Assertions.assertEquals(new Integer(0), Mono.fromFuture(subject.get("a")).block());
+		Assertions.assertEquals(Integer.valueOf(0), Mono.fromFuture(subject.get("a")).block());
 		// That's the interesting case here! Note the zero above: This means that we get old cache data (which is what we want!)
 		log.info("Stats on cache: "+subject.synchronous().stats().toString());
 
@@ -87,20 +89,20 @@ class CaffeineAsyncLoadingTest {
 		Thread.sleep(250); // wait until async loading took place
 		
 		log.info("Sending fourth request");
-		Assertions.assertEquals(new Integer(1), Mono.fromFuture(subject.get("a")).block());
+		Assertions.assertEquals(Integer.valueOf(1), Mono.fromFuture(subject.get("a")).block());
 		log.info("Stats on cache: "+subject.synchronous().stats().toString());
 		
 	}
 	
 	
-	private final class AsyncCacheLoaderFailureImplementation implements AsyncCacheLoader<String, Integer> {
+	private static final class AsyncCacheLoaderFailureImplementation implements AsyncCacheLoader<String, Integer> {
 		private int executionNumber = 0;
 		
 		@Override
 		public @NonNull CompletableFuture<Integer> asyncLoad(@NonNull String key,
 				@NonNull Executor executor) {
 
-			log.info(String.format("Request loading iteration %d for request %s", this.executionNumber, key));
+			log.info("Request loading iteration {} for request {}", this.executionNumber, key);
 			Mono<Integer> result = null;
 			
 			synchronized(this) {
@@ -116,8 +118,9 @@ class CaffeineAsyncLoadingTest {
 			return result.toFuture();
 		}
 	}
+	
 	@Test
-	void testFailureOnAsynchronous() {
+	public void testFailureOnAsynchronous() {
 		FakeTicker ticker = new FakeTicker();
 		
 		AsyncLoadingCache<String, Integer> subject = Caffeine.newBuilder()
@@ -127,11 +130,11 @@ class CaffeineAsyncLoadingTest {
 				.recordStats()
 				.buildAsync(new AsyncCacheLoaderFailureImplementation());
 		
-		Assertions.assertEquals(new Integer(0), Mono.fromFuture(subject.get("a")).block());
+		Assertions.assertEquals(Integer.valueOf(0), Mono.fromFuture(subject.get("a")).block());
 		
 		ticker.advance(Duration.ofSeconds(10));
 		
-		Assertions.assertEquals(new Integer(0), Mono.fromFuture(subject.get("a")).block());
+		Assertions.assertEquals(Integer.valueOf(0), Mono.fromFuture(subject.get("a")).block());
 		
 		ticker.advance(Duration.ofSeconds(250));
 		
@@ -145,5 +148,69 @@ class CaffeineAsyncLoadingTest {
 			thrown = true;
 		}
 		Assertions.assertTrue(thrown);
+	}
+
+	private static final class CompleterThread extends Thread {
+
+		private CompletableFuture<Integer> future;
+		
+		CompleterThread(CompletableFuture<Integer> future) {
+			this.future = future;
+		}
+		
+		@Override
+		public void run() {
+			try {
+				Thread.sleep(100);
+			} catch (InterruptedException e) {
+				e.printStackTrace();
+			}
+			
+			future.complete(1);
+		}
+
+	}
+	
+	private static class AsyncOtherThreadResolver implements AsyncCacheLoader<String, Integer> {
+
+		private int counter = 0;
+		
+		@Override
+		public @NonNull CompletableFuture<Integer> asyncLoad(@NonNull String key, @NonNull Executor executor) {
+			counter++;
+			
+			CompletableFuture<Integer> future = new CompletableFuture<Integer>();
+			
+			new CompleterThread(future).start();
+			
+			return future;
+		}
+
+		public int getCounter() {
+			return counter;
+		}
+		
+	}
+	
+	@Test
+	public void testAsyncCompleteOnOtherThread() throws InterruptedException, ExecutionException, TimeoutException {
+		AsyncOtherThreadResolver loader = new AsyncOtherThreadResolver();
+		
+		AsyncLoadingCache<String, Integer> subject = Caffeine.newBuilder()
+				.expireAfterAccess(240, TimeUnit.SECONDS)
+				.refreshAfterWrite(120, TimeUnit.SECONDS)
+				.buildAsync(loader);
+		
+		@NonNull
+		CompletableFuture<Integer> future1 = subject.get("a");
+		future1.get(1000L, TimeUnit.SECONDS);
+		Assertions.assertEquals(1, loader.getCounter());
+		
+		Thread.sleep(500);
+		
+		CompletableFuture<Integer> future2 = subject.get("a");
+		future2.get(1000L, TimeUnit.SECONDS);
+		
+		Assertions.assertEquals(1, loader.getCounter());
 	}
 }
